# agentic-harness-demo

./: .env.example  .gitignore  README.md  __init__.py  config.py  main.py  models.py  pyproject.toml  requirements.txt
agents/: __init__.py  base.py  coordinator.py  judge.py  planner.py  reflector.py  verifier.py
api/: __init__.py  fastapi.py
browser/: __init__.py  tradingview.py
context/: __init__.py  context_manager.py  memory.py
docs/: prd.md  systemdesign.md
observability/: __init__.py  langfuse.py
prompts/: chart_analysis.md  planner.md  verifier.md
tools/: __init__.py  market.py  screenshot.py  search.py  sentiment.py  validator.py  vision.py
