[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentic-harness-demo"
version = "0.1.0"
description = "AI-powered Intraday Trading Research Harness"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "playwright>=1.48.0",
    "pillow>=10.0.0",
    "sqlite-utils>=3.36",
    "rich>=13.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
agentic-harness = "main:cli"

[tool.setuptools.packages.find]
include = ["*"]

[tool.ruff]
line-length = 100
target-version = "py311"
